dev: blockchain integrated

--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script id="vertexshader" type="x-shader/x-vertex">
+    // Vertex shader code here
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
+<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.3.0/simplex-noise.min.js"></script>
+
+  
+  <script id="fragmentshader" type="x-shader/x-fragment">
+    // Fragment shader code here
+  </script>
+  
 </html>
